--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -61,4 +61,88 @@
             text-align: end;
         }
     }
+    .section.experiment {
+        grid-row: span 18;
+        .titled-paragraph {
+            grid-column: 2/12;
+            grid-row: span 8;
+        }
+        img {
+            width: 100%;
+            object-fit: cover;
+        }
+        img:nth-of-type(1) {
+            grid-column: 1/3;
+            grid-row: 10;
+        }
+        img:nth-of-type(2) {
+            grid-column: 3/6;
+            grid-row: 11;
+        }
+        img:nth-of-type(3) {
+            grid-column: 1/4;
+            grid-row: 12;
+            z-index: -1;
+        }
+        img:nth-of-type(4) {
+            grid-column: 4/8;
+            grid-row: 10;
+            z-index: -1;
+        }
+        img:nth-of-type(5) {
+            grid-column: -7/-3;
+            grid-row: 12;
+        }
+        img:nth-of-type(6) {
+            grid-column: 1/2;
+            grid-row: 9;
+            z-index: -1;
+        }
+        img:nth-of-type(7) {
+            grid-column: -10/-8;
+            grid-row: 13;
+        }
+        img:nth-of-type(8) {
+            grid-column: -12/-9;
+            grid-row: 14;
+            z-index: -1;
+        }
+        img:nth-of-type(9) {
+            grid-column: -8/-4;
+            grid-row: 14;
+        }
+        img:nth-of-type(10) {
+            grid-column: -5/-2;
+            grid-row: 11;
+        }
+        img:nth-of-type(11){
+            grid-column: -10/-8;
+            grid-row: 16;
+        }
+        img:nth-of-type(12){
+            grid-column: -5/-1;
+            grid-row: 15;
+            z-index: -1;
+        }
+        img:nth-of-type(13){
+            grid-column: -4/-1;
+            grid-row: 13;
+        }
+        img:nth-of-type(14){
+            grid-column: -7/-5;
+            grid-row: 17;
+        }
+        img:nth-of-type(15){
+            grid-column: -4/-3;
+            grid-row: 18;
+        }
+        img:nth-of-type(16){
+            grid-column: -5/-4;
+            grid-row: 10;
+        }
+        img:nth-of-type(17){
+            grid-column: -3/-1;
+            grid-row: 17;
+        }
+    }
 }
