--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -12,6 +12,17 @@
         margin: 0;
 
     }
+    p {
+        max-width: 32ch;
+    }
+    .titled-paragraph {
+        h2 {
+            max-width: 32ch;
+            width: 100%;
+        }
+        align-items: center;
+        grid-column: 2/12;
+    }
     .section.title {
         grid-row: 2 / span 10;
         .furniture {
@@ -47,7 +58,7 @@
     }
     .section.intro {
         grid-row: span 12;
-        .titled-paragraph, blockquote, .attribution {
+        blockquote, .attribution {
             grid-column: 2/12;
         }
         .titled-paragraph {
@@ -62,62 +73,62 @@
         }
     }
     .section.experiment {
-        grid-row: span 20;
+        grid-row: span 18;
         .titled-paragraph {
-            grid-column: 2/12;
             grid-row: span 8;
         }
         img {
+            max-width: 9.375rem;
             width: 100%;
             object-fit: cover;
         }
         img:nth-of-type(1) {
             grid-column: 1/3;
-            grid-row: 11;
+            grid-row: 10;
         }
         img:nth-of-type(2) {
             grid-column: 3/6;
-            grid-row: 12;
+            grid-row: 11;
         }
         img:nth-of-type(3) {
             grid-column: 1/4;
-            grid-row: 13;
+            grid-row: 12;
             z-index: -1;
         }
         img:nth-of-type(4) {
             grid-column: 4/8;
-            grid-row: 11;
+            grid-row: 10;
             z-index: -1;
         }
         img:nth-of-type(5) {
             grid-column: -7/-3;
-            grid-row: 13;
+            grid-row: 12;
         }
         img:nth-of-type(6) {
             grid-column: 1/2;
-            grid-row: 10;
+            grid-row: 9;
             z-index: -1;
         }
         img:nth-of-type(7) {
             grid-column: -10/-8;
-            grid-row: 14;
+            grid-row: 13;
         }
         img:nth-of-type(8) {
             grid-column: -12/-9;
-            grid-row: 15;
+            grid-row: 14;
             z-index: -1;
         }
         img:nth-of-type(9) {
             grid-column: -8/-4;
-            grid-row: 15;
+            grid-row: 14;
         }
         img:nth-of-type(10) {
             grid-column: -5/-2;
-            grid-row: 12;
+            grid-row: 11;
         }
         img:nth-of-type(11){
             grid-column: -10/-8;
-            grid-row: 17;
+            grid-row: 16;
         }
         img:nth-of-type(12){
             grid-column: -5/-1;
@@ -126,23 +137,39 @@
         }
         img:nth-of-type(13){
             grid-column: -4/-1;
-            grid-row: 14;
+            grid-row: 13;
         }
         img:nth-of-type(14){
             grid-column: -7/-5;
-            grid-row: 18;
+            grid-row: 9;
         }
         img:nth-of-type(15){
-            grid-column: -4/-3;
-            grid-row: 19;
+            grid-column: -7/-6;
+            grid-row: 17;
         }
         img:nth-of-type(16){
             grid-column: -5/-4;
-            grid-row: 11;
+            grid-row: 10;
         }
         img:nth-of-type(17){
             grid-column: -3/-1;
-            grid-row: 18;
+            grid-row: 10;
+        }
+    }
+    .section.who {
+        grid-row: span 15;
+        .attribution, h2, .left, .right, .paragraphs {
+            grid-column: 2/12;
+            margin: 0;
+        }
+        h2 {
+            font-size: 3rem;
+            font-weight: 400;
+            text-align: center;
+            grid-row: 3 / span 2;
+        }
+        .paragraphs {
+            grid-row: 6 / span 8;
         }
     }
 }
