feat(popup section): mobile done

--- a/src/_desktop.scss
+++ b/src/_desktop.scss
@@ -3,6 +3,13 @@
 
 @mixin home-page-desktop(){
     @include mixins.desktop {
-        
+        .desktop {
+            display: block;
+            visibility: visible;
+        }
+        .mobile {
+            display: none;
+            visibility: hidden;
+        }
     }
 }
