--- a/src/_base.scss
+++ b/src/_base.scss
@@ -46,4 +46,10 @@
         text-align: center;
         text-wrap: balance;
     }
+    .sd-screenshot {
+        span {
+            color: black;
+            font-family: 'source-sans-pro', sans-serif;
+        }
+    }
 }
