--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -187,7 +187,7 @@
         }
     }
     .section.popup {
-        grid-row: span 11;
+        grid-row: span 12;
         .attribution {
             grid-column: 2/12;
             justify-self: center;
@@ -204,6 +204,34 @@
                 left: 2.9rem;
                 font-size: .86rem;
                 bottom: 16.5rem;
+            }
+        }
+    }
+    .section.images {
+        grid-row: span 18;
+        .ai-images {
+            grid-template-columns: repeat(5, minmax(0, 1fr));
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .overlay, .ai-images {
+            grid-row: 1 / span 16;
+            grid-column: 1/13;
+        }
+        .overlay {
+            display: grid;
+            grid-template-columns: subgrid;
+            background: transparentize($color: #000000, $amount: .5);
+            .popup {
+                grid-column: 2/12;
+                color: global.$bg-primary;
+                background: white;
+                border-radius: 1rem;
+                padding: 2rem;
+                height: fit-content;
+                align-self: center;
             }
         }
     }
