--- a/src/_desktop.scss
+++ b/src/_desktop.scss
@@ -3,13 +3,44 @@
 
 @mixin home-page-desktop(){
     @include mixins.desktop {
+        .mobile {
+            display: none;
+            visibility: hidden;
+        }
         .desktop {
             display: block;
             visibility: visible;
         }
-        .mobile {
-            display: none;
-            visibility: hidden;
+        .section.title {
+            h1 {
+                font-size: 8rem;
+            }
+            .furniture {
+                grid-row: 2;
+            }
+            .img {
+                grid-column: 1 / span 6;
+                grid-row: 3 / span 11;
+            }
+            .caption {
+                grid-row: 8 / span 2;
+                grid-column: 7 / span 4;
+                justify-self: center;
+                margin: 0;
+                font-size: 2rem;
+                text-wrap: balance;
+                align-self: center;
+            }
+        }
+    }
+    @media screen and (min-width: 1728px){
+        .section.title {
+            h1 {
+                font-size: 12.5625rem;
+            }
+            .caption {
+                grid-row: 8 / span 3;
+            }
         }
     }
 }
