--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -2,9 +2,13 @@
 @use './mixins.scss' as mixins;
 
 @mixin home-page-mobile(){
-    .desktop {
+    .desktop, .tablet {
         display: none;
         visibility: hidden;
+    }
+    .mobile {
+        display: block;
+        visibility: visible;
     }
     .titled-paragraph  {
         flex-direction: column;
@@ -46,7 +50,7 @@
         h1 {
             grid-column: 5/12;
             font-size: 3.7rem;
-            grid-row: 3 / span 3;
+            grid-row: 4 / span 3;
             line-height: 110%;
             font-weight: 500;
         }
@@ -55,14 +59,16 @@
             grid-row: 7;
             font-size: 1.25rem;
         }
-        img {
+        .img {
             grid-column: 1 / 6;
             grid-row: 3 / 9;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: 10%;
             z-index: -1;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: 10%;
+            }
         }
     }
     .section.intro {
