--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -3,6 +3,41 @@
 
 @mixin home-page-tablet(){
     @include mixins.tablet {
-        
+        .mobile {
+            display: none;
+            visibility: hidden;
+        }
+        .tablet {
+            display: block;
+            visibility: visible;
+        }
+        .section {
+            &.title, &.intro, &.experiment, &.who, &.popup, &.images, &.conclusion {
+                grid-row: span 13;
+            }
+        }
+        .section.title {
+            .furniture {
+                grid-row: 2;
+            }
+            h1 {
+                grid-column: 6 / span 7;
+                grid-row: 3 / 13;
+                align-self: center;
+                line-height: 100%;
+                margin: 0;
+            }
+            .img {
+                grid-column: 1 / span 6;
+                grid-row: 3 / span 11;
+            }
+            .caption {
+                grid-row: 9 / span 2;
+                font-size: 2rem;
+                text-wrap: balance;
+                align-self: center;
+                margin-left: 2rem;
+            }
+        }
     }
 }
