--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -16,6 +16,20 @@
                 grid-row: span 13;
             }
         }
+        .titled-paragraph {
+            display: grid;
+            grid-template-columns: subgrid;
+            gap: inherit;
+            align-items: flex-start;
+            h2 {
+                text-align: right;
+                width: 100%;
+            }
+            p:first-of-type {
+                margin-top: 0;
+            }
+        }
+
         .section.title {
             .furniture {
                 grid-row: 2;
@@ -37,6 +51,26 @@
                 text-wrap: balance;
                 align-self: center;
                 margin-left: 2rem;
+            }
+        }
+
+        .section.intro {
+            .titled-paragraph {
+                grid-row: 3 / span 5;
+                grid-column: 2 / span 10;
+                h2 {
+                    grid-column: 1 / 3;
+                }
+                div {
+                    grid-column: 3/11;
+                }
+            }
+            blockquote {
+                grid-column: 2/11;
+                grid-row:  9/ span 3;
+            }
+            .attribution {
+                grid-row: 12;
             }
         }
     }
