--- a/src/_tablet.scss
+++ b/src/_tablet.scss
@@ -67,10 +67,103 @@
             }
             blockquote {
                 grid-column: 2/11;
-                grid-row:  9/ span 3;
+                grid-row:  9/ span 4;
+                font-size: 2.5rem;
             }
             .attribution {
-                grid-row: 12;
+                grid-row: 13;
+            }
+        }
+        .section.experiment {
+            grid-row: span 14;
+            .titled-paragraph {
+                height: 100%;
+                grid-column: 4 / span 10;
+                grid-row: 2 / span 7;
+                h2 {
+                    grid-column: 1 /3;
+                }
+                .paragraphs {
+                    grid-column: 3/10;
+                }
+            }
+            img {
+                max-width: 13rem;
+            }
+            img:nth-of-type(1){
+                grid-row: 2 / span 4;
+                grid-column: 1 / span 2;
+            }
+            img:nth-of-type(2){
+                grid-row: 3 / span 5;
+                grid-column: 2 / span 3;
+            }
+            img:nth-of-type(3){
+                grid-row: 4 / span 1;
+                grid-column: 1 / span 1;
+            }
+            img:nth-of-type(4){
+                grid-row: 7 / span 2;
+                grid-column: 3 / span 2;
+                z-index: -1;
+            }
+            img:nth-of-type(5){
+                grid-row: 5 / span 2;
+                grid-column: 3 / span 2;
+            }
+            img:nth-of-type(6){
+                grid-row: 6 / span 2;
+                grid-column: 1 / span 2;
+            }
+            img:nth-of-type(7){
+                grid-row: 8 / span 1;
+                grid-column: 5 / span 1;
+            }
+            img:nth-of-type(8){
+                grid-row: 10 / span 4;
+                grid-column: 2 / span 4;
+                max-width: 15.6875rem;
+            }
+            img:nth-of-type(9){
+                grid-row: 8 / span 3;
+                grid-column: 1 / span 3;
+                z-index: -1;
+            }
+            img:nth-of-type(10){
+                grid-row: 11 / span 3;
+                grid-column: 1 / span 3;
+            }
+            img:nth-of-type(11){
+                grid-row: 9 / span 3;
+                grid-column: -9 / span 3;
+                z-index: 1;
+            }
+            img:nth-of-type(12){
+                grid-row: 10 / span 4;
+                grid-column: -7 / span 4;
+                z-index: 0;
+                max-width: 15.6875rem;
+            }
+            img:nth-of-type(13){
+                grid-row: 13 / span 1;
+                grid-column: 9 / span 1;
+                z-index: -1;
+            }
+            img:nth-of-type(14){
+                grid-row: 9 / span 1;
+                grid-column: -5 / span 1;
+            }
+            img:nth-of-type(15){
+                grid-row: 12 / span 3;
+                grid-column: -9 / span 3;
+            }
+            img:nth-of-type(16){
+                grid-row: 13 / span 2;
+                grid-column: -3 / span 2;
+            }
+            img:nth-of-type(17){
+                grid-row: 12/ span 1;
+                grid-column: -3 / span 1;
             }
         }
     }
