feat(who section): done

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -70,7 +70,7 @@
         font-family: 'grafier', serif;
         margin: 0;
     }
-    h1, blockquote {
+    h1, h2, blockquote {
         transition: all, .5s;
     }
     .new-line {
