--- a/src/_desktop.scss
+++ b/src/_desktop.scss
@@ -35,12 +35,12 @@
         }
         .section.intro {
             .titled-paragraph{
-                grid-column: 2 / span 4;
+                grid-column: 1 / span 5;
                 h2 {
-                    grid-column: 1/2;
+                    grid-column: 1/3;
                 }
                 div {
-                    grid-column: 2/5;
+                    grid-column: 3/6;
                 }
             }
             blockquote {
@@ -141,6 +141,24 @@
             img:nth-of-type(17){
                 grid-row: 12/ span 3;
                 grid-column: -3 / span 2;
+            }
+        }
+        .section.who {
+            .attribution {
+                grid-row: 2;
+            }
+            h2 {
+                font-size: 5.8461538462rem;
+                line-height: 100%;
+                grid-row: 4 / span 2;
+                align-self: flex-end;
+            }
+            .paragraphs {
+                grid-row:  7 / span 4;
+                flex-direction: row;
+                align-items: flex-start;
+                justify-content: center;
+                gap: 1rem;
             }
         }
     }
