--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -219,11 +219,13 @@
     }
     .section.images {
         grid-row: span 16;
+        overflow: hidden;
         .ai-images {
             grid-template-columns: repeat(5, minmax(0, 1fr));
             img {
-                width: 100%;
                 height: 100%;
+                width: 100%;
+                object-fit: cover;
             }
         }
         .overlay, .ai-images {
@@ -241,6 +243,8 @@
                 border-radius: 1rem;
                 padding: 2rem;
                 height: fit-content;
+                width: fit-content;
+                justify-self: center;
                 align-self: center;
             }
         }
@@ -255,6 +259,8 @@
         }
         .attribution{
             align-self: end;
+            max-width: none;
+            width: 100%;
         }
         blockquote{
             grid-row: 4 / span 4;
@@ -262,9 +268,13 @@
         }
         .paragraphs{
             grid-row: 8 / span 4;
+            p:first-child {
+                margin-top: 0;
+            }
         }
         .furniture {
             grid-row: 14;
+            justify-content: space-between;
             .right {
                 text-align: right;
             }
