fix(safari): safari styles again...

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -224,7 +224,10 @@
             grid-template-columns: repeat(5, minmax(0, 1fr));
             img {
                 width: 100%;
-                height: calc(100%/6);
+                height: 100%;
+                @supports (hanging-punctuation: first) and (font: -apple-system-body) and (-webkit-appearance: none) {
+                    height: calc(100%/6);
+                  }
                 object-fit: cover;
             }
         }
